<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Militant</string>
    <string name="app_logo_description">&#8230;</string>
    <string name="contents_description">&#8230;</string>
    <string name="players_name">El Djudil</string>
    <string name="players_fullname">Fajar Wahyudianto</string>
    <string name="players_no">6</string>
    <string name="players_position">DMF</string>
    <string name="description">Description</string>
    <string name="events_category">Events Category</string>
    <string name="events_name">Events Name</string>
    <string name="events_summary">Donec tempor nibh eget aliquam finibus. Vivamus pharetra aliquam molestie. Sed eget tempus magna.</string>
    <string name="events_descriptions">Donec tempor nibh eget aliquam finibus. Vivamus pharetra aliquam molestie. Sed eget tempus magna. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean nulla ante, sagittis et dolor quis, semper vulputate augue. Fusce id orci mollis, mattis arcu at, finibus nulla. Ut ultricies hendrerit mi, eget accumsan quam sagittis non. Donec a felis sit amet felis pulvinar maximus id eget velit. Aliquam pretium gravida tortor, vel maximus nisl varius ut. </string>
    <string name="events_search">Search Events</string>
    <string name="developer_photo">https://avatars.githubusercontent.com/u/12522356?v=4</string>
    <string name="developer_name">Wahyudianto, Fajar</string>
    <string name="developer_email">fwahyudi06@gmail.com</string>
    <string name="developer_location">Tangerang, Indonesia</string>
    <string name="item_grid_strFullname">AC Milan\'s Player Full Name</string>
    <string name="menu_home_strList">List View</string>
    <string name="menu_home_strGrid">Grid View</string>
    <string name="menu_home_strCard">Card View</string>
    <string name="menu_home_strAbout">About</string>
    <string name="activity_detail_strNumberProfile">AC Milan\'s Player Number Tshirt</string>
    <string name="activity_detail_lbl_strNumber">Number</string>
    <string name="activity_detail_lbl_strBirthdate">Birthdate</string>
    <string name="activity_detail_lbl_strBirthplace">Birthplace</string>
    <string name="activity_detail_strStatusMatches">Stats and Matches</string>
    <string name="activity_detail_strTotalMatchesDescription">AC Milan\'s Player Total Matches</string>
    <string name="activity_detail_lbl_strTotalMatches">Total Matches</string>
    <string name="activity_detail_strTotalGoalsDescription">AC Milan\'s Player Total Goals</string>
    <string name="activity_detail_lbl_strTotalGoals">Total Goals</string>
    <string name="activity_detail_strLeagueMatchesDescription">AC Milan\'s Player League Matches</string>
    <string name="activity_detail_lbl_strLeagueMatches">League Matches</string>
    <string name="activity_detail_strLeagueGoalsDescription">AC Milan\'s Player League Goals</string>
    <string name="activity_detail_lbl_strLeagueGoals">League Goals</string>
    <string name="btn_favorite_strFavorite">Favorite</string>
    <string name="btn_share_strShare">Share</string>
    <string name="btn_event_strRegister">Register</string>
    <string-array name="arrPlayersFullName">
        <item>Nelson de Jesus Silva</item>
        <item>Alessandro Nesta</item>
        <item>Paolo Maldini</item>
        <item>Marcos Evangelista de Moraes Cafu</item>
        <item>Sérgio Cláudio dos Santos Serginho</item>
        <item>Andrea Pirlo</item>
        <item>Gennaro Ivan Gattuso</item>
        <item>Clarence Seedorf</item>
        <item>Manuel Rui Costa</item>
        <item>Andriy Shevchenko</item>
        <item>Filippo Inzaghi</item>
    </string-array>
    <string-array name="arrPlayersName">
        <item>Dida</item>
        <item>Nesta</item>
        <item>Maldini</item>
        <item>Cafu</item>
        <item>Serginho</item>
        <item>Pirlo</item>
        <item>Gattuso</item>
        <item>Seedorf</item>
        <item>Rui Costa</item>
        <item>Shevchenko</item>
        <item>Inzaghi</item>
    </string-array>
    <string-array name="arrPlayersPosition">
        <item>Goalkeeper</item>
        <item>Defender</item>
        <item>Defender</item>
        <item>Defender</item>
        <item>Defender</item>
        <item>Midfielder</item>
        <item>Midfielder</item>
        <item>Midfielder</item>
        <item>Midfielder</item>
        <item>Forward</item>
        <item>Forward</item>
    </string-array>
    <string-array name="arrPlayersDescription">
        <item>Acquired in 1999 from Cruzeiro, Nelson Dida played for Lugano and Corinthians before consolidating his position as AC Milan�s first&#8211;choice goalkeeper starting from 2002. He was the key player in the Champions League final against Juventus, saving three penalty kicks at Old Trafford in Manchester. Repeated success in Athens in 2007, when the Rossoneri beat Liverpool. Considered one of the best goalkeepers in the third millennium, he also won a league title, an Italian League Super Cup, two European Cup Winners� Cups and a Club World Cup.</item>
        <item>Defensive pivot at the most successful Lazio in the club�s history, Alessandro Nesta arrived at Milanello in his full maturity. He reminded fans of the best Baresi for his class, positioning and timely closing. He significantly helped Milan win the most prestigious trophies. Infallible was his penalty kick in the final in Manchester against Juventus, and amazing was his goal to Boca Juniors when Milan became the most successful club in the world.</item>
        <item>902 official matches played and 26 trophies won in twenty-five years in Milan jersey. There are no words to describe the football career of Paolo Maldini who made his debut as a very young boy in Udine, on 20 January 1985, with coach Nils Liedholm on the bench. A triumphal ride initiated with Arrigo Sacchi and continued with Capello. In 1997 he inherited the captain�s armband from Baresi and lifted new trophies with Zaccheroni and Ancelotti. The apotheosis came on 28 May 2003, when after 40 years from Milan�s first European Champion Clubs� Cup win, he lifted, just like his father Cesare, the Champions League trophy at Old Trafford in Manchester.</item>
        <item>After three consecutive world cup finals and a legendary Scudetto with Roma, Cafu joined AC Milan in 2003. Not content with the numerous achievements already attained, Brazil’s captain proved to be one of the best right wingers in the world, untiringly fulfilling his duty in his playing position. He soon won a championship and a European Super Cup, but the big objective was for Milan the Champions League, the only trophy missing in Cafu’s honours: it came on 23 May 2007, followed by the Club World Cup a few months later.</item>
        <item>Arrived at AC Milan in the summer of 1999 to support Bierhoff’s masterful skills in the air, Serginho ended up making the fortunes of Inzaghi and Shevchenko who scored an impressive number of goals taking advantage of his precise assists. Left back with a high propensity to get forward, he was also an excellent crosser who scored his fair share of goals. The Brazilian’s incredible performance in the 2001 derby, including three assists and a goal, helped Milan to a clear 6&#8211;0 win. Serginho proved to be decisive also in the Champions League final in 2003, when in the penalty shootout he put his penalty past Buffon contributing to Milan’s victory over Juventus.</item>
        <item>Coming from the prolific youth sector of Brescia, Andrea Pirlo arrived at AC Milan in 2001. Carlo Ancelotti initially deployed him in his natural position of attacking midfielder, then he moved him slightly backwards and made of him one of the best deep-lying playmakers in the world. It was the start of a triumphal era for the Rossoneri that dominated the world again thanks to the balance and pace given by the new Metronome. In ten years he won 2 league titles, an Italian Cup, an Italian League Super Cup, a Champions League, 2 European Super Cups and a Club World Cup.</item>
        <item>After his debut in Serie A with Perugia, Rino Gattuso moved to Glasgow Rangers, where he further developed his fighting qualities. Following a period with Salernitana Gattuso joined AC Milan. Highly appreciated by the fans for his generosity, he perfectly integrated with Andrea Pirlo, with whom he formed a successful pair also in the national team. In his 13 years at Milan he won 10 titles, including 2 league titles, 2 Champions League titles and a Club World Cup.</item>
        <item>Born in Suriname, Clarence Seedorf, thanks to his brilliant technique and extraordinary tactical intelligence, is the only player who has won the Champions league with three different clubs. As the youngest debutant for Ajax ever, he quickly made an amazing career winning the top continental club competition with the Lancers in 1995, then replicating the European success in 1998 with Real Madrid. After a spell at Inter, he moved to AC Milan in 2002. In 10 seasons with the Rossoneri, he won numerous trophies in Italy and Europe, two more Champions League titles, 2 league titles and a Club Word Cup.</item>
        <item>Spotted by the legend of Portuguese football Eusebio, Rui Consta started out in the youth sector of Benfica at 9 years of age. Leader of the extraordinary generation that won the Under-20 World Cup on home soil, in 1994 he moved to Fiorentina. Seven years of excellent passing earned him the attention of AC Milan that signed him in summer 2001. It’s the start of three seasons during which the remarkable number ten won a Scudetto, an Italian Cup, an Italian League Super Cup, a Champions League and a European Super Cup.</item>
        <item>The prototype of modern-day striker, Andriy Shevchenko arrived at Milanello in 1999, after winning 5 league titles with Dinamo Kiev under the guidance of his mentor Valeriy Lobanovski. The Ukrainian quickly adjusted to Serie A, and managed to win in his debut season the league scoring title with 24 goals. Deft with both feet, full of speed and power in the air, Sheva scored the unforgettable winning penalty with incredibly high concentration and precision in the 2003 Champions League final. Only Nordahl scored for Milan more goals than he did.</item>
        <item>Filippo Inzaghi started his football career in the youth sector of Piacenza, played for several clubs, including Leffe, Parma, Atalanta and Juventus, scoring an impressive number of goals. At the peak of his career he arrived at AC Milan. In the jersey of the Rossoneri ‘Superpippo’ exploded scoring a plethora of goals, including a decisive brace in the Champions League final revenge in Athens, repeated at the Club World Cup against Boca Juniors. He finished his adventure with Milan as a footballer with 126 goals and 300 official appearances, along with a long series of trophies.</item>
    </string-array>
    <string name="menu_home">Home</string>
    <string name="menu_club">Club</string>
    <string name="menu_news">News</string>
    <string name="menu_events">Events</string>
    <string name="menu_teams">Teams</string>
    <string name="menu_upcoming_events">Upcoming</string>
    <string name="menu_finished_events">Finished</string>
    <string name="menu_favorites_events">Favorites</string>
    <string name="menu_account">Account</string>
    <string name="navbar_home_title">MILITAN EVENTS</string>
    <string name="navbar_upcoming_events_home_subtitle">Upcoming Events</string>
    <string name="navbar_finished_events_home_subtitle">Finished Events</string>
    <string name="dark_mode">Dark Mode</string>
</resources>