<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.fwahyudianto.militant.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/nav_club"
        android:name="com.fwahyudianto.militant.ui.club.ClubFragment"
        android:label="@string/menu_club"
        tools:layout="@layout/fragment_club" />
    <fragment
        android:id="@+id/nav_news"
        android:name="com.fwahyudianto.militant.ui.news.NewsFragment"
        android:label="@string/menu_news"
        tools:layout="@layout/fragment_news" />
    <fragment
        android:id="@+id/nav_events"
        android:name="com.fwahyudianto.militant.ui.events.EventsFragment"
        android:label="@string/menu_events"
        tools:layout="@layout/fragment_events" />
    <fragment
        android:id="@+id/nav_teams"
        android:name="com.fwahyudianto.militant.ui.teams.TeamsFragment"
        android:label="@string/menu_teams"
        tools:layout="@layout/fragment_teams" />
</navigation>