<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="finishedEvents"
            type="com.fwahyudianto.militant.data.response.ListEventsItem" />
    </data>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_events"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="16dp"
        card_view:cardCornerRadius="16dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="8dp"
            android:paddingTop="25sp">

            <ImageView
                android:id="@+id/img_item_events_image"
                android:layout_width="125dp"
                android:layout_height="125dp"
                android:contentDescription="@string/description"
                android:scaleType="centerCrop"
                app:setImage='@{finishedEvents.imageLogo}'
                card_view:layout_constraintBottom_toBottomOf="parent"
                card_view:layout_constraintStart_toStartOf="parent"
                card_view:layout_constraintTop_toTopOf="parent"
                tools:src="@tools:sample/avatars" />

            <TextView
                android:id="@+id/tv_item_events_category"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:text='@{finishedEvents.category}'
                android:textAlignment="textStart"
                android:textSize="16sp"
                android:textStyle="bold"
                card_view:layout_constraintEnd_toEndOf="parent"
                card_view:layout_constraintStart_toEndOf="@+id/img_item_events_image"
                card_view:layout_constraintTop_toTopOf="@+id/img_item_events_image"
                tools:ignore="@string/events_category"
                tools:text="@string/events_category" />

            <TextView
                android:id="@+id/tv_item_events_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:maxLines="2"
                android:text='@{finishedEvents.name}'
                android:textAlignment="textStart"
                android:textColor="#FF5483"
                card_view:layout_constraintBottom_toBottomOf="@+id/img_item_events_image"
                card_view:layout_constraintEnd_toEndOf="@+id/tv_item_events_category"
                card_view:layout_constraintStart_toStartOf="@+id/tv_item_events_category"
                card_view:layout_constraintTop_toBottomOf="@+id/tv_item_events_category"
                card_view:layout_constraintVertical_bias="0.0"
                tools:text="@string/events_name" />

            <TextView
                android:id="@+id/tv_item_events_summary"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginTop="8dp"
                android:ellipsize="end"
                android:maxLines="3"
                android:text='@{finishedEvents.summary}'
                card_view:layout_constraintBottom_toBottomOf="@+id/img_item_events_image"
                card_view:layout_constraintEnd_toEndOf="@+id/tv_item_events_name"
                card_view:layout_constraintStart_toStartOf="@+id/tv_item_events_name"
                card_view:layout_constraintTop_toBottomOf="@+id/tv_item_events_name"
                card_view:layout_constraintVertical_bias="0.0"
                tools:text="@string/events_summary" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</layout>